added camera functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">bboxPhotoApp</string>
+    <string name="app_name">Photo Capture App</string>
+    <string name="btn_btnFloating">Take Photo</string>
 </resources>
