--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="btn_btnEditImage">Edit Photos</string>
     <string name="btn_btnOptionsMenu">Options Menu</string>
     <string name="btn_classSpinner">Change Class</string>
+    <string name="btn_addClass">Add Class</string>
 </resources>
